# bookin

./: .ebignore  .gitignore  README.md  Rule-Based-chatbot(pickier)  pyproject.toml  requirements.txt
.ebextensions/: django.config
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_bookrentbyuser_exp_date.py  0004_bookreview.py  0004_booksmodel_like_count.py  0005_merge_20220328_1942.py
bookstore/: admin.py  models.py  urls.py  views.py
bookstore/migrations/: 0001_initial.py  0002_initial.py
chat/: admin.py  custom_context.py  models.py  services.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
core/: apps.py  services.py  urls.py  views.py
like/: models.py  tests.py  urls.py  views.py
like/migrations/: 0001_initial.py  0002_initial.py
like/services/: like_service.py
search/: services.py  tests.py  urls.py  views.py
static/css/: base.css  bookin_style.css  detail.css  main.css  myPage.css  mystore.css  review.css  store.css
static/js/: base.js  chat.js  detail.js  myPage.js  mystore.js  reset-password.js  socket.js  store.js
templates/: base.html  html_form.html
templates/bookstore/: detail.html  main.html  mystore.html  review.html  store.html
templates/chat/: chatRoomList.html  chattingRoom.html
templates/search/: bookBox.html  bookStoreBox.html  search_main.html
templates/users/: check-password.html  find_password.html  profile.html  (+5 more)
users/: admin.py  models.py  tests.py  urls.py  views.py
(+10 files in other folders)
